--- a/StoreApp/StoreApp.WebApplication/App.razor
+++ b/StoreApp/StoreApp.WebApplication/App.razor
@@ -8,7 +8,7 @@
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="DispatcherService.WebApplication.styles.css" />
+    <link rel="stylesheet" href="StoreApp.WebApplication.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <HeadOutlet />
@@ -18,8 +18,8 @@
 
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
-            <RouteView RouteData="context" DefaultLayout="@typeof(MainLayout)" />
-            <FocusOnNavigate RouteData="context" Selector="h1" />
+            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
         </Found>
         <NotFound>
             <PageTitle>Not found</PageTitle>
