--- a/StoreApp/StoreApp.WebApplication/Layout/NavMenu.razor
+++ b/StoreApp/StoreApp.WebApplication/Layout/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿@using MudBlazor
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Dispatcher service</a>
+        <a class="navbar-brand" href="">Store App</a>
     </div>
 </div>
 
@@ -12,21 +12,21 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <MudIcon Icon="@Icons.Material.Filled.Person" Color="MudBlazor.Color.Primary" />
-                <span class="bi" aria-hidden="true"></span> Drivers
+                <span class="bi" aria-hidden="true"></span> Sales
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="transports">
+            <NavLink class="nav-link" href="customers">
                 <MudIcon Icon="@Icons.Material.Filled.CarRental" Color="MudBlazor.Color.Primary" />
-                <span class="bi" aria-hidden="true"></span> Transports
+                <span class="bi" aria-hidden="true"></span> Customers
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="schedules">
+            <NavLink class="nav-link" href="products">
                 <MudIcon Icon="@Icons.Material.Filled.EditCalendar" Color="MudBlazor.Color.Primary" />
-                <span class="bi" aria-hidden="true"></span> Schedules
+                <span class="bi" aria-hidden="true"></span> Producs
             </NavLink>
         </div>
 
