--- a/StoreApp/StoreApp.WebApplication/Pages/Customer.razor
+++ b/StoreApp/StoreApp.WebApplication/Pages/Customer.razor
@@ -1,5 +1,5 @@
 ﻿@page "/customers"
-@using StoreApp.StoreApp.Server.Dto
+@using StoreApp.Server.Dto
 @inject HttpClient Http
 @inject ServerApi Api
 
